--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1987,13 +1987,13 @@ a:hover {
 .button:hover {
   border-color: #f0f01e;
   background-color: #f0f01e;
-  color: #fff;
+  color: #000;
 }
 
 .button.slider-button {
   margin-top: 15px;
-  border: 2px solid #fff;
-  background-color: transparent;
+  border: 2px solid #000;
+  background-color: #F00;
   font-family: Montserrat, sans-serif;
   color: #fff;
   font-size: 11px;
@@ -2002,7 +2002,7 @@ a:hover {
 }
 
 .button.slider-button:hover {
-  background-color: #fff;
+  background-color: #ff0;
   color: #000;
 }
 
@@ -2015,8 +2015,8 @@ a:hover {
   padding-right: 25px;
   padding-left: 35px;
   float: right;
-  border-color: #1ca6ac;
-  background-color: #1ca6ac;
+  border-color: #000;
+  background-color: #000;
   background-image: url("https://assets.website-files.com/5440c8f92df526b94a5e4b54/561a97315e3be056688e4b51_Icon-arrow-right.png"),
     url("https://assets.website-files.com/5440c8f92df526b94a5e4b54/55df8c20e7ff55996458f7c3_Icon-heart.png");
   background-position: 116% 50%, 15px 50%;
@@ -2038,7 +2038,7 @@ a:hover {
   padding-right: 40px;
   padding-left: 15px;
   border-color: #000;
-  background-color: #000;
+  background-color: #FF0;
   background-position: 91% 50%, -26px 50%;
 }
 
@@ -2077,14 +2077,14 @@ a:hover {
   width: 130px;
   margin-right: auto;
   margin-left: auto;
-  border-color: #f0f01e;
-  background-color: #f0f01e;
+  border-color: #F00;
+  background-color: #F00;
   font-weight: 700;
 }
 
 .button.item-block-button:hover {
-  border-color: #000;
-  background-color: #000;
+  border-color: #FF0;
+  background-color: #FF0;
 }
 
 .button.item-block-button.black {
@@ -2099,13 +2099,13 @@ a:hover {
 }
 
 .button.yellow {
-  border-color: #f0f01e;
-  background-color: #f0f01e;
+  border-color: #f00;
+  background-color: #f00;
 }
 
 .button.yellow:hover {
-  border-color: #000;
-  background-color: #000;
+  border-color: #ff0;
+  background-color: #ff0;
 }
 
 .button.submit-button {
@@ -2182,7 +2182,7 @@ a:hover {
 }
 
 .navbar {
-  background-color: #f0f01e;
+  background-color: #F00;
 }
 
 .nav-link {
@@ -2192,13 +2192,14 @@ a:hover {
   transition: background-color 200ms ease;
   font-family: Montserrat, sans-serif;
   color: #fff;
+  font-weight:bold;
   font-size: 15px;
   text-align: left;
   text-transform: uppercase;
 }
 
 .nav-link:hover {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: #FF0;
 }
 
 .nav-link.w--current {
@@ -2230,24 +2231,24 @@ a:hover {
 }
 
 .home-slide {
-  background-image: url("https://res.cloudinary.com/dbskfmbc8/image/upload/v1652732149/Action%20Girls%20Africa/FB_IMG_16486999979550453_rivrsw.jpg");
+  background-image: url(""../images/home-slider/slider 1.jpg");
   background-position: 50% 50%;
   background-size: cover;
 }
 
 .home-slide._2 {
-  background-image: url("https://res.cloudinary.com/dbskfmbc8/image/upload/v1652732118/Action%20Girls%20Africa/FB_IMG_16487006805347139_gcdym8.jpg");
+  background-image: url("../images/home-slider/slide 2.JPG");
   background-position: 50% 38%;
   background-size: cover;
 }
 
 .home-slide._3 {
-  background-image: url("https://res.cloudinary.com/dbskfmbc8/image/upload/v1652732068/Action%20Girls%20Africa/FB_IMG_16486744418682191_rnshyz.jpg");
+  background-image: url("../images/home-slider/slide 3.JPG");
   background-position: 50% 65%;
 }
 
 .home-slide._4 {
-  background-image: url("https://res.cloudinary.com/dbskfmbc8/image/upload/v1652732031/Action%20Girls%20Africa/FB_IMG_16486740661441599_j2qsfj.jpg");
+  background-image: url("../images/home-slider/slide 4.jpg");
   background-size: cover;
 }
 
@@ -2729,7 +2730,7 @@ a:hover {
 }
 
 .donation-tab-button.w--current {
-  background-color: hsla(0, 0%, 39.2%, 0);
+  background-color: #FF0;
   color: #f0f01e;
 }
 
@@ -2823,7 +2824,8 @@ a:hover {
   width: 100%;
   height: 100%;
   padding: 35px 40% 35px 35px;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: #FF0;
+  color:#000;
   -webkit-transition: background-color 200ms ease;
   transition: background-color 200ms ease;
 }
@@ -3692,6 +3694,7 @@ a:hover {
     margin-left: 6px;
     padding-top: 5px;
     font-size: 12px;
+	font-weight:bold;
     line-height: 26px;
     letter-spacing: 0px;
   }
